@@ -1,1 +1,3 @@
 # IFT1025-TP2-server
+
+POUR EXECUTER client_fx, il faut faire la commande: java -jar --module-path "C:\pathToJavaFX_SDK\lib" --add-modules javafx.controls,javafx.fxml client_fx.jar IL FAUT CHANGER "pathToJavaFX_SDK" au chemin du sdk de javaFX dans l'ordinateur de l'utilisateur
